--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "nanoid": "^3.3.6",
     "nodemon": "^2.0.22",
     "sqlite": "^4.2.0",
-    "sqlite3": "^5.1.6",
-    "tinyurl": "^1.1.7"
+    "sqlite3": "^5.1.6"
   }
 }
